build/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbimon-jobs
  namespace: staging
spec:
  selector:
    matchLabels:
      app: arbimon-jobs
  template:
    metadata:
      labels:
        app: arbimon-jobs
    spec:
      containers:
      - name: arbimon-jobs
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/arbimon-jobs:latest
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "0.25"
            ephemeral-storage: "5Gi"
          limits:
            memory: "1Gi"
            cpu: "0.5"
            ephemeral-storage: "5Gi"
        volumeMounts:
        - name: ephemeral
          mountPath: "/tmp"
      volumes:
        - name: ephemeral
          emptyDir: {}
