build/staging/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: arbimon-jobs-service
  namespace: staging
spec:
  selector:
    app: arbimon-jobs
  type: ClusterIP 
  ports:
  - name: node
    port: 80
    targetPort: 3007
